# palmsens-sdk

./: .gitignore  README.md
application_notes/electrochemical_noise/: readme.md
application_notes/methodscript_app/: LICENSE  app.py  readme.md  requirements.txt
application_notes/methodscript_app/.streamlit/: config.toml
application_notes/remote_corrosion/: app.py  requirements.txt
docs/sdk/modules/ROOT/pages/: index.adoc  releases.adoc
labview/: README.md
labview/docs/modules/ROOT/: nav.adoc
labview/docs/modules/ROOT/pages/: index.adoc  installation.adoc
matlab/: DEVELOPMENT.md  README.md
matlab/docs/modules/ROOT/: nav.adoc
matlab/docs/modules/ROOT/pages/: examples.adoc  index.adoc
maui/: DEVELOPMENT.md  README.md
maui/docs/modules/ROOT/: nav.adoc
maui/docs/modules/ROOT/pages/: examples.adoc  index.adoc  installation.adoc
python/: DEVELOPMENT.md  README.md  pyproject.toml  test_insternal_storage.py  test_internal_storage.py  zensical.toml
python/docs/: requirements.txt
python/docs/modules/ROOT/: nav.adoc
python/docs/zensical/: comm_protocol.md  communication.md  examples.md  filesystem.md  installation.md  measuring.md
python/docs/zensical/reference/: comm_protocol.md  communication.md  filesystem.md  instrument.md  instrument_async.md  io.md
python/docs/zensical/reference/energy/: battery_cycling.md  constant_power.md  constant_resistance.md  index.md
python/docs/zensical/releases/: index.md
python/src/pypalmsens/: __init__.py  _io.py  _stream.py  _types.py  types.py
python/src/pypalmsens/_data/: curve.py  eisdata.py  measurement.py
python/src/pypalmsens/_instruments/: __init__.py  capabilities.py  capabilities_listing.py  comm.py  comm_async.py  comm_protocol.py  comm_protocol_async.py  comm_registry.py  filesystem.py  filesystem_async.py  instrument.py  instrument_manager.py  instrument_manager_async.py  instrument_pool.py  instrument_pool_async.py  internal_storage.py  measurement_manager_async.py
python/src/pypalmsens/_methods/: energy.py  settings.py  techniques.py
python/src/pypalmsens/_methodscript/: validate.py
python/src/pypalmsens/templates/: battery_cycling.mscr  constant_power.mscr  constant_resistance.mscr
python/tests/: test_comm_protocol.py  test_comm_protocol_async.py  test_energy.py  test_filesystem.py  test_filesystem_async.py  test_instrument.py  test_stream.py
python/tests/methodscript/: test_convert.py
tools/: changelog.py  prepare_release.py  release_stats.py
winforms/: README.md
winforms/docs/modules/ROOT/: nav.adoc
winforms/docs/modules/ROOT/pages/: examples.adoc  index.adoc  installation.adoc
wpf/: README.md
wpf/docs/modules/ROOT/: nav.adoc
wpf/docs/modules/ROOT/pages/: examples.adoc  index.adoc  installation.adoc
