[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "PyPalmSens"
version = "1.10.1"
description = "Python SDK for PalmSens instruments"
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{name = "Palmsens BV", email = "info@palmsens.com"},
]
keywords = [
    "electrochemistry",
    "data-analysis",
    "voltammetry",
    "potentiometry",
    "impedance-specroscopy",
]
license = "LicenseRef-Modified-BSD-3-Clause-PalmSens"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    'antlr4-python3-runtime>=4.13.1',
    'jinja2',
    'pydantic',
    'numpy',
    'pythonnet',
    'typing-extensions',
]

[project.urls]
homepage = "https://github.com/palmsens/palmsens-sdk"
issues = "https://github.com/palmsens/palmsens-sdk/issues"
documentation = "https://dev.palmsens.com/python/latest/_attachments/index.html"
changelog = "https://github.com/palmsens/palmsens-sdk/releases"

[project.optional-dependencies]
develop = [
    "bump-my-version",
    "coverage",
    "griffe2md",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
]

publishing = [
    "twine",
    "wheel",
    "build",
]

docs = [
    "zensical >= 0.0.38",
    "mkdocstrings >= 1.0.4",
    "mkdocstrings-python >= 2.0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.coverage.run]
branch = true
source = ["pypalmsens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "instrument: Mark tests that need an instrument connection."
]
log_cli = false
log_cli_level = "INFO"

[tool.ruff]
src = ['src/pypalmsens']
line-length = 96
target-version = "py310"
exclude = ["src/PalmSens-stubs"]


[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = [
	"F",  # Pyflakes
	"E",  # pycodestyle (error)
	"W",  # pycodestyle (warning)
    "I",  # isort
]
ignore = [
    "E501",  # line-too-long
]


[tool.ruff.lint.isort]
known-first-party=["pypalmsens"]
known-third-party = []
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["I"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.mypy]
files = ["src/pypalmsens", "tests", "examples"]
exclude = [
    "typings",
    "src/PalmSens-stubs",
    "src/pypalmsens/_methodscript/generated"
]
allow_redefinition = true
ignore_missing_imports = true
disable_error_code = [
    "prop-decorator",
]


[tool.pyright]
include = ["src/pypalmsens", "tests"]
ignore = [
    "typings",
    "src/PalmSens-stubs",
    "examples",
    "python/src/pypalmsens/_methodscript/generated/.*"
]
reportMissingModuleSource = false
reportAttributeAccessIssue = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportPrivateUsage = false
enableTypeIgnoreComments = true
reportIgnoreCommentWithoutRule = false

[tool.bumpversion]
current_version = "1.10.1"

[[tool.bumpversion.files]]
filename = "src/pypalmsens/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/antora.yml"
search = "version: '{current_version}'"
replace = "version: '{new_version}'"
